# nebula

./: .gitattributes  AGENTS.md  README.md
tap/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  picker.html  tsconfig.json  vite.config.ts
tap/crates/tap-core/: Cargo.toml
tap/crates/tap-core/src/: condition.rs  dsl.rs  engine.rs  expression.rs  lib.rs  recorder.rs  schema.rs  storage.rs  submacro.rs  variables.rs
tap/crates/tap-platform/: Cargo.toml
tap/crates/tap-platform/src/: dpi.rs  error.rs  injector.rs  input_hook.rs  lib.rs  macos_events.rs  mouse_tracker.rs  pixel.rs  window.rs
tap/crates/tap-platform/src/dpi/: macos.rs  mod.rs  windows.rs
tap/crates/tap-platform/src/events/: macos.rs  mod.rs  rdev.rs
tap/crates/tap-platform/src/input_hook/: macos.rs  mod.rs  rdev_impl.rs  windows_native.rs
tap/crates/tap-platform/src/mouse_tracker/: macos.rs  mod.rs  rdev_impl.rs
tap/crates/tap-platform/src/pixel/: macos.rs  mod.rs  windows.rs
tap/crates/tap-platform/src/window/: macos.rs  mod.rs  windows.rs
tap/docs/: DSL_REFERENCE.md  FEATURE_KEY_TO_CLICK_MODE.md  FUNCTIONAL_GUIDE.md  PROJECT_STRUCTURE.md  UI_DESIGN.md
tap/docs/roadmap/: PHASE_1_MVP.md  PHASE_2_RECORD_REPLAY.md  PHASE_3_CONDITIONS.md  PHASE_4_EXTENSIBILITY.md  PHASE_5_ARCHITECTURE.md  ROADMAP.md
tap/src/: App.tsx  Picker.tsx  picker-main.tsx  picker.css  styles.css
tap/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tap/src-tauri/capabilities/: main.json
tap/src-tauri/icons/: generate_icons.sh
tap/src-tauri/src/: key_click.rs  main.rs  state.rs
tap/templates/: auto_type.yaml  loop_with_counter.yaml  simple_click.yaml  wait_for_color.yaml
wardenly-go/: .gitignore  README.md  build.ps1  build.sh  go.mod  go.sum
wardenly-go/application/: coordinator.go  coordinator_test.go
wardenly-go/application/session/: browser_ctrl.go  browser_ctrl_test.go  screen_capture.go  screen_capture_test.go  script_runner.go  script_runner_test.go  session.go  session_test.go
wardenly-go/cmd/wardenly/: main.go  rsrc_windows_386.syso  rsrc_windows_amd64.syso
wardenly-go/core/command/: browser_ops.go  command.go  command_test.go  script_ctrl.go  session_lifecycle.go
wardenly-go/core/event/: browser_events.go  event.go  event_test.go  script_events.go
wardenly-go/core/eventbus/: eventbus.go  eventbus_test.go  impl.go
wardenly-go/core/state/: state.go  state_test.go
wardenly-go/docs/: FUNCTIONAL_GUIDE.md  PROJECT_STRUCTURE.md  UI_DESIGN.md
wardenly-go/domain/account/: account.go  account_test.go  repository.go  service.go
wardenly-go/domain/group/: group.go  repository.go  service.go
wardenly-go/domain/scene/: loader.go  registry.go  scene.go  scene_test.go
wardenly-go/domain/script/: loader.go  registry.go  script.go  script_test.go
wardenly-go/infrastructure/browser/: chromedp_driver.go  driver.go  driver_test.go
wardenly-go/infrastructure/logging/: config.go  setup_dev.go  setup_prod.go
wardenly-go/infrastructure/ocr/: client.go  client_test.go
wardenly-go/infrastructure/repository/: account_repo.go  group_repo.go  mongodb.go  mongodb_test.go
wardenly-go/presentation/: account_form.go  bridge.go  bridge_test.go  canvas_manager.go  canvas_window.go  canvas_window_test.go  group_form.go  main_window.go  main_window_test.go  management_dialog.go  screencast_manager.go  session_list.go  session_tab.go  session_tab_test.go
wardenly-go/resources/: resources.go
wardenly-go/resources/scenes/: city.yaml  loading.yaml
wardenly-go/resources/scripts/: join_battle.yaml
wardenly-go/tools/scene-analyzer/: README.md  go.mod  main.go
wardenly-rs/: .gitignore  README.md  index.html  package.json  vite.config.ts
wardenly-rs/docs/: FUNCTIONAL_GUIDE.md  PROJECT_STRUCTURE.md  UI_DESIGN.md
wardenly-rs/docs/roadmap/: BROWSER_PERSISTENCE_RFC.md  PHASE_1_FOUNDATION.md  PHASE_2_BROWSER.md  PHASE_3_SCRIPTING.md  PHASE_4_EXTENSIBILITY.md  ROADMAP.md  SCRIPT_DSL_V2.md
wardenly-rs/src/: App.tsx  main.tsx
wardenly-rs/src-tauri/: Cargo.toml  tauri.conf.json
wardenly-rs/src-tauri/capabilities/: default.json
wardenly-rs/src-tauri/icons/: icon.icns
wardenly-rs/src-tauri/resources/configs/: app.yaml  gesture.yaml  keyboard.yaml  themes.yaml
wardenly-rs/src-tauri/resources/scenes/: battle.yaml  building.yaml  loading.yaml  tasks.yaml  tower.yaml  world.yaml
wardenly-rs/src-tauri/resources/scripts/: join_battle.yaml  join_tower.yaml  lead_battle.yaml  military_dispatch.yaml  rivalry_reigns.yaml
wardenly-rs/src-tauri/src/: lib.rs  main.rs
wardenly-rs/src-tauri/src/adapter/tauri/: commands.rs  error.rs  events.rs  mod.rs  state.rs
wardenly-rs/src-tauri/src/application/: command.rs  coordinator.rs  eventbus.rs  mod.rs
wardenly-rs/src-tauri/src/application/input/: gesture.rs  mod.rs  processor.rs
wardenly-rs/src-tauri/src/application/service/: account_service.rs  group_service.rs  mod.rs  script_runner.rs  session_actor.rs
wardenly-rs/src-tauri/src/domain/: error.rs  event.rs  mod.rs  repository.rs
wardenly-rs/src-tauri/src/domain/model/: account.rs  expr.rs  group.rs  mod.rs  scene.rs  script.rs  session.rs
wardenly-rs/src-tauri/src/infrastructure/: mod.rs
wardenly-rs/src-tauri/src/infrastructure/browser/: chromium.rs  driver.rs  mod.rs
wardenly-rs/src-tauri/src/infrastructure/config/: app_config.rs  gesture_config.rs  keyboard_config.rs  loader.rs  mod.rs  paths.rs  resources.rs  settings.rs  theme_config.rs
wardenly-rs/src-tauri/src/infrastructure/input/: keyboard.rs  linux.rs  macos.rs  mod.rs  windows.rs
wardenly-rs/src-tauri/src/infrastructure/logging/: mod.rs
wardenly-rs/src-tauri/src/infrastructure/ocr/: client.rs  config.rs  mod.rs
wardenly-rs/src-tauri/src/infrastructure/persistence/: mod.rs
wardenly-rs/src-tauri/src/infrastructure/persistence/mongodb/: account_repo.rs  connection.rs  group_repo.rs  mod.rs
wardenly-rs/src-tauri/src/infrastructure/persistence/sqlite/: account_repo.rs  group_repo.rs  mod.rs
wardenly-rs/src/hooks/: useTauriEvents.ts
wardenly-rs/src/providers/: ThemeProvider.tsx
(+18 files in other folders)
