[package]
name = "tap-tauri"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "tap desktop app (Tauri backend)."

[package.metadata.tauri]
config = "tauri.conf.json"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tap-core = { path = "../crates/tap-core" }
tap-platform = { path = "../crates/tap-platform" }


