[package]
name = "wardenly-rs"
version = "0.1.0"
description = "WLY Game Automation Tool"
authors = ["Aaron Tian"]
edition = "2021"

[lib]
name = "wardenly_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "Wardenly"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Phase 2: Browser automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
base64 = "0.22"
futures = "0.3"
image = "0.25"

# Phase 3: Script execution
humantime = "2"
rand = "0.8"

# Phase 4: Extensibility
rdev = "0.5"
mongodb = { version = "3", optional = true }

[features]
default = []
mongodb = ["dep:mongodb"]
