[package]
name = "wardenly-rs"
version = "0.1.0"
description = "WLY Game Automation Tool"
authors = ["Aaron Tian"]
edition = "2021"

[lib]
name = "wardenly_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "Wardenly"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true          # 链接时优化
codegen-units = 1   # 减少代码生成单元
opt-level = 3       # "z" 最小体积, "s" 体积优化, 3 性能优化
strip = true        # 去掉调试符号

# 优化依赖
[profile.release.package."*"]
opt-level = "z"
strip = true

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
dirs = "6.0.0"
ulid = { version = "1", features = ["serde"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Phase 2: Browser automation
chromiumoxide = { version = "0.8.0", features = ["tokio-runtime"], default-features = false }
base64 = "0.22"
futures = "0.3"
image = "0.25"

# Phase 3: Script execution
humantime = "2"

# Phase 4: Extensibility
rdev = "0.5"
mongodb = "3"

# Embed directories at compile time
include_dir = "0.7"
