[package]
name = "tap-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "tap core engine (domain + scheduling) for Timed Action Performer."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "macros"] }
tracing = "0.1"
crossbeam-channel = "0.5"
dirs-next = "2"


