[package]
name = "tap-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "tap core engine (domain + scheduling) for Timed Action Performer."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
time = { version = "0.3", features = ["serde", "macros"] }
tracing = "0.1"
crossbeam-channel = "0.5"
dirs-next = "2"
rhai = { version = "1.19", features = ["sync"] }


