[package]
name = "tap-platform"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "tap platform adapters (input injection, input hook for recording)."

[dependencies]
tap-core = { path = "../tap-core" }
thiserror = "2"
tracing = "0.1"
enigo = "0.3"
rdev = "0.5"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
